start install nodeExporter

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,12 @@
 [defaults]
+inventory = ./inventory-prometheus
 host_key_checking = False
+forks = 5
+log_path = ./ansible.log
+deprecation_warnings = False
 timeout = 30
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_ask_pass = False
