--- a/ansible/nodeExporter.yml
+++ b/ansible/nodeExporter.yml
@@ -8,7 +8,7 @@
             name: "{{item}}"
             state: present
           loop:
-            - ntp
+            - tar
         - name: Start & enable NTP on Debian
           service:
             name: ntp
@@ -22,23 +22,41 @@
           yum:
             name: "{{item}}"
             state: present
-          loop: # Spisok
-            - ntp
-        - name: Start & enable NTP on RedHat
-          service:
-            name: ntpd
-            state: started
-            enabled: yes
+          loop:
+            - tar
       when: ansible_os_family == "RedHat"
 
-    - name: Add group
-      group:
-        name: devops
-        state: present
+    - name: Install Node exporter
 
-    - name: Create users
-      user:
-        name: "{{item}}"
-        state: present
-        groups: devops
-      loop: "{{usernames}}"
+      block:
+        - name: Copy Node exporter bin
+          copy:
+            src: ../userdata/nonode_exporter-1.3.1.linux-amd64.tar.gz 
+            dest: /tmp/nonode_exporter-1.3.1.linux-amd64.tar.gz
+        
+        - name: Dir for user data
+          file:
+            path: /tmp/node
+            state: directory
+            
+        - name: Extract bin
+          unarchive: 
+            src: /tmp/nonode_exporter-1.3.1.linux-amd64.tar.gz
+            dest: /tmp/node/
+        
+        - name: Copy Node exporter bin
+          copy:
+            src: /tmp/node/node_exporter-1.3.1.linux-amd64/node_exporter
+            dest: /usr/sbin/node_exporter
+    
+    - name: Enable Services
+      block:
+        - name: Copy node_exporter.service
+          copy:
+            src: ../userdata/node_exporter.service 
+            dest: /etc/systemd/system/node_exporter.service
+        - name: node_exporter Start&Enable
+          service:
+            name: node_exporter.service
+            state: started
+            enabled: yes
