--- a/ansible/nodeExporter.yml
+++ b/ansible/nodeExporter.yml
@@ -43,18 +43,24 @@
           unarchive: 
             src: /tmp/nonode_exporter-1.3.1.linux-amd64.tar.gz
             dest: /tmp/node/
-        
+
         - name: Copy Node exporter bin
           copy:
             src: /tmp/node/node_exporter-1.3.1.linux-amd64/node_exporter
             dest: /usr/sbin/node_exporter
+
+        - name: Change mod on bin
+          file:
+            dest: /usr/sbin/node_exporter
+            mode: 755
     
-    - name: Enable Services
+    - name: Copy & Enable Services
       block:
         - name: Copy node_exporter.service
           copy:
             src: ../userdata/node_exporter.service 
             dest: /etc/systemd/system/node_exporter.service
+
         - name: node_exporter Start&Enable
           service:
             name: node_exporter.service
