--- a/userdata/prometheus.yml
+++ b/userdata/prometheus.yml
@@ -1,14 +1,16 @@
 # Sample config for Prometheus.
 
 global:
-  scrape_interval:     15s # By default, scrape targets every 15 seconds.
-  evaluation_interval: 15s # By default, scrape targets every 15 seconds.
+  scrape_interval:     5s # By default, scrape targets every 15 seconds.
+  evaluation_interval: 5s # By default, scrape targets every 15 seconds.
   # scrape_timeout is set to the global default (10s).
 
-  # Attach these labels to any time series or alerts when communicating with
-  # external systems (federation, remote storage, Alertmanager).
-  external_labels:
-      monitor: 'example'
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          # - alertmanager:9093
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
@@ -20,37 +22,25 @@ rule_files:
 scrape_configs:
 
   - job_name: jenkins
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['localhost:9100']
+      - targets: ["192.168.56.90:9100"]
 
   - job_name: Nexus
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['192.168.56.91:9100']
+      - targets: ["192.168.56.91:9100"]
 
   - job_name: sonarqube
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['192.168.56.92:9100']
+      - targets: ["192.168.56.92:9100"]
 
   - job_name: backend
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['192.168.56.93:9100']
+      - targets: ["192.168.56.93:9100"]
 
   - job_name: ctfrontend
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['192.168.56.95:9100']
+      - targets: ["192.168.56.95:9100"]
 
   - job_name: cpfrontend
-    scrape_interval: 5s
-    scrape_timeout: 5s
     static_configs:
-      - targets: ['192.168.56.97:9100']
+      - targets: ["192.168.56.97:9100"]
