--- a/ansible/install_prometheus_2.37.yml
+++ b/ansible/install_prometheus_2.37.yml
@@ -68,7 +68,7 @@
     
     - name: Copy & Enable Services
       block:
-        - name: Copy node_exporter.service
+        - name: Copy prometheus.service
           copy:
             src: ../userdata/prometheus.service
             dest: /etc/systemd/system/prometheus.service
